--- a/android/app/src/main/res/layout/item_statcounter.xml
+++ b/android/app/src/main/res/layout/item_statcounter.xml
@@ -11,6 +11,7 @@
         android:id="@+id/circle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="@dimen/margin_small"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:adjustViewBounds="true"
