--- a/android/app/src/main/res/layout/toolbar.xml
+++ b/android/app/src/main/res/layout/toolbar.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="@color/dntRed"
-    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:elevation="4dp"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
