--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -83,7 +83,7 @@
 
     <style name="FabButtonText" parent="@style/TextAppearance.AppCompat">
         <item name="android:textSize">@dimen/textsize_micro</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="WhiteButton" parent="@style/Widget.AppCompat.Button.Colored">
