Slide info panel in and out
- I set the elevation 1dp down for the info panel so it slides
  below the button
- we still need to clip it so it doesn't show right of the button,
  but I'm not spending time on that now

--- a/android/app/src/main/res/layout/layout_checkinbutton.xml
+++ b/android/app/src/main/res/layout/layout_checkinbutton.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         app:backgroundTint="@color/fabInfo"
-        app:elevation="6dp"
+        app:elevation="@dimen/fab_elevation"
         app:fabSize="normal"
         app:rippleColor="@color/fabRipple"
         app:useCompatPadding="true" />
@@ -29,7 +29,7 @@
         android:layout_alignRight="@id/fabButton"
         android:layout_alignStart="@id/fabButton"
         android:layout_centerVertical="true"
-        android:elevation="6dp"
+        android:elevation="@dimen/fab_elevation"
         android:gravity="center"
         android:maxLines="2"
         tools:ignore="PrivateResource,UnusedAttribute"
@@ -46,7 +46,7 @@
         android:layout_toLeftOf="@id/fabButton"
         android:layout_toStartOf="@id/fabButton"
         android:background="@color/dntLightGray"
-        android:elevation="6dp"
+        android:elevation="@dimen/info_elevation"
         android:gravity="center"
         android:padding="@dimen/margin_small"
         android:visibility="invisible"
