--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -16,6 +16,9 @@
 
     <fraction name="aspectRatioProjectAdapter">300.000%</fraction>
 
+    <dimen name="fab_elevation">6dp</dimen>
+    <dimen name="info_elevation">5dp</dimen>
+
     <!-- dimen name="design_fab_size_normal" tools:override="true">80dp</dimen>
     <dimen name="design_fab_image_size" tools:override="true">80dp</dimen -->
 
