--- a/android/app/src/main/res/menu/menu_feedback.xml
+++ b/android/app/src/main/res/menu/menu_feedback.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/feedback"
-        android:icon="@drawable/ic_action_comments"
+        android:icon="@drawable/ic_feedback"
         android:title="@string/action_feedback"
         app:showAsAction="always" />
 
